[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Driving Range.tscn" type="PackedScene" id=3]
[ext_resource path="res://GolfBall/GolfBall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Main.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 5 )
handedness = "right"

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="Driving Range" parent="." instance=ExtResource( 3 )]

[node name="GolfBall" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[connection signal="ball_stopped" from="GolfBall" to="." method="end_of_shot"]
[connection signal="telephone_box_hit" from="GolfBall" to="." method="_on_GolfBall_telephone_box_hit"]
